# TinyPawCompress

./: package-lock.json  package.json
src/: app.css  app.html  i18n.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native-lib/: Package.resolved  Package.swift
src-tauri/native-lib/Sources/TinyPawNative/: Bridge.swift  ImageProcessor.swift  PDFProcessor.swift  VideoProcessor.swift
src-tauri/src/: image_compressor.rs  lib.rs  pdf_compressor.rs  utils.rs
src/components/: FileCard.svelte  InputGroup.svelte  PillGroup.svelte  QualityPreset.svelte  SettingsSidebar.svelte  Sidebar.svelte  ToggleRow.svelte  ToggleSwitch.svelte
src/config/: settings.ts
src/routes/: +page.svelte
