[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
swift-rs = { version = "1.0.5", features = ["build"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.22.0", features = ["v4"] }
pdfium-render = "0.8.37"
image = "0.25.10"
base64 = "0.22.1"
tokio = { version = "1.50.0", features = ["full"] }
lopdf = "=0.39.0"
tauri-plugin-dialog = "2"
turbojpeg = "1.4.0"
rayon = "1.11.0"
swift-rs = "1.0.5"

